--- a/meta-ov/conf/distro/ovlinux.conf
+++ b/meta-ov/conf/distro/ovlinux.conf
@@ -8,7 +8,7 @@ DISTRO_VERSION = "${@os.getenv('DISTRO_VERSION_OVERWRITE') if os.getenv('DISTRO_
 #DISTRO_VERSION = "${@time.strftime('%y%j',time.gmtime())}"
 #DISTRO_VERSION = "${DATE}"
 
-DISTRO_CODENAME = "ov-kirkstone"
+DISTRO_CODENAME = "ov-langdale"
 SDK_VENDOR = "-ovlinuxsdk"
 SDK_VERSION := "${@'${DISTRO_VERSION}'.replace('snapshot-${DATE}','snapshot')}"
 
@@ -83,7 +83,7 @@ SYSTEMD_AUTO_ENABLE:pn-dropbear = "disable"
 BAD_RECOMMENDATIONS += "udev-hwdb"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-openvario"
-OLDEST_KERNEL = "5.10"
+OLDEST_KERNEL = "5.15"
 
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${IMAGE_BASENAME}-${TUNE_PKGARCH}"
 SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
@@ -93,6 +93,7 @@ DISTRO_EXTRA_RRECOMMENDS += " ${POKY_DEFAULT_EXTRA_RRECOMMENDS}"
 
 DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${DISTRO_FEATURES_LIBC} ${POKY_DEFAULT_DISTRO_FEATURES}"
 DISTRO_FEATURES:append = " systemd"
+DISTRO_FEATURES:append = " systemd usrmerge eudev"
 DISTRO_FEATURES:remove = "acl argp pcmcia usbgadget xattr nfs zeroconf pci 3g nfc x11 gobject-introspection-data sysvinit"
 
 VIRTUAL-RUNTIME_init_manager = "systemd"
@@ -105,7 +106,7 @@ TCLIBCAPPEND = ""
 
 IMAGE_INSTALL:append = " connman connman-client"
 
-DISTRO_FEED_URI ?= "https://ftp.openvario.org/feed-kirkstone"
+DISTRO_FEED_URI ?= "https://ftp.openvario.org/feed-langdale"
 DISTRO_FEED_ARCHS ?= "all armv7vet2hf-neon ${MACHINE_ARCH}"
 
 #
